# General_Health_Query_Chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  chatbot.py  pyproject.toml  requirements.txt
src/general_health_query_chatbot/: __init__.py
