[project]
name = "general-health-query-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sehrish Shafiq", email = "sehrishshafiq345@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.9.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0"
]

[project.scripts]
general-health-query-chatbot = "general_health_query_chatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
